# XenoideWTL

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CClassView.cpp  CClassView.h  CDialogManager.cpp  CDialogManager.h  CDocument.h  CDocumentManager.cpp  CDocumentManager.h  CFolderBrowser.cpp  CFolderBrowser.h  CIdeFrame.cpp  CIdeFrame.h
